# hackatho

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/backend/: settings.py  urls.py
backend/challenges/: models.py  serializers.py  services.py  urls.py  views.py
backend/challenges/migrations/: 0001_initial.py
backend/core/: decorators.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/core/migrations/: 0001_initial.py  0002_remove_hobby_category_remove_challenge_hobby_and_more.py
backend/hobbies/: models.py  serializers.py  urls.py  views.py
backend/hobbies/migrations/: 0001_initial.py
backend/recommendations/: models.py  serializers.py  services.py  urls.py  views.py
backend/recommendations/migrations/: 0001_initial.py
devtools/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: package-lock.json  package.json
frontend/app/: _layout.tsx  index.tsx  login.tsx  register.tsx  tinder.tsx
frontend/app/(tabs)/: _layout.tsx  explore.tsx  index.tsx  profile.tsx  roulette.tsx  social.tsx
frontend/app/(tabs)/details/: [hobbyId].tsx
frontend/app/(tabs)/explore/: _layout.tsx  details.tsx  index.tsx
frontend/app/(tabs)/hobby/: [hobbyId].tsx
frontend/components/forms/: Input.tsx  InputLabel.tsx
frontend/components/home/: Card.tsx
frontend/components/tinder/: Card.tsx
frontend/components/ui/: HobbyCard.tsx  IconSymbol.tsx
frontend/lib/: W3CTextColor.ts  axios.tsx  types.ts
