[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["mj300405 <michal-jagoda@o2.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
openai = "^1.55.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
